# event-discovery-framework

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FINAL_DELIVERY.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  SECURITY.md  SETUP_INSTRUCTIONS.md  SSOT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  lint.yml  pages.yml  release.yml
docs/: CNAME  index.html
notebooks/: 01_demo_quick.ipynb
paper/: Makefile  main.tex  references.bib
paper/sections/: 01_introduction.tex  02_related_work.tex  03_methods.tex  04_experiments.tex  05_results.tex  06_conclusion.tex
scripts/: generate_paper_figures.py  setup_github.sh  validate_naming.py
scripts/templates/: new_method.py.template  new_test.py.template
src/event_discovery/: __init__.py  cli.py  evaluation.py
src/event_discovery/core/: __init__.py  base.py  features.py  video_processor.py
src/event_discovery/methods/: __init__.py  baseline_dense.py  geometric_outlier.py  hierarchical_energy.py  optimization_sparse.py
tests/: conftest.py  test_evaluation.py  test_hierarchical_energy.py  test_video_processor.py
