[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-discovery"
version = "0.1.0"
description = "Physics-Inspired Event Discovery in Long-Horizon Video"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Meshal Alshammari"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.3.0",
]
vlm = [
    "openai>=1.0.0",
    "Pillow>=9.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
all = [
    "event-discovery[viz,vlm,notebook,dev]",
]

[project.scripts]
event-discovery = "event_discovery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
