[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-discovery"
version = "0.1.0"
description = "Physics-Inspired Event Discovery in Long-Horizon Video"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Meshal Alshammari", email = "meshal@berkeley.edu"},
]
keywords = [
    "computer-vision", "video-understanding", "event-detection",
    "physics-inspired", "optimization", "renormalization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.3.0",
]
vlm = [
    "openai>=1.0.0",
    "Pillow>=9.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "event-discovery[viz,vlm,notebook,dev]",
]

[project.urls]
Homepage = "https://github.com/meshal-alawein/event-discovery-framework"
Repository = "https://github.com/meshal-alawein/event-discovery-framework"
Issues = "https://github.com/meshal-alawein/event-discovery-framework/issues"

[project.scripts]
event-discovery = "event_discovery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["event_discovery"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (ruff format handles it)
    "B008",   # do not perform function calls in argument defaults
    "N803",   # argument name should be lowercase (math variable names)
    "N806",   # variable in function should be lowercase (math variable names)
]

[tool.ruff.lint.isort]
known-first-party = ["event_discovery"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
